--- a/src/Elements/Heading/Heading.css
+++ b/src/Elements/Heading/Heading.css
@@ -6,8 +6,8 @@
 }
 
 .heading-card h2 {
-  font-size: 2.5rem;
-  color: #ffffff;
+  font-size: 1.5rem;
+  color: var(--text-color);
   font-weight: 700;
   text-transform: uppercase;
   letter-spacing: 2px;
