--- a/src/Components/Experience/Experience.css
+++ b/src/Components/Experience/Experience.css
@@ -1,7 +1,6 @@
 /* ===== Experience Section ===== */
 .experience-section {
-  margin-top: 60px;
-  padding: 20px;
+  padding: 0 20px;
 }
 
 .experience-timeline {
