Added the p and li justify in app css

--- a/src/App.css
+++ b/src/App.css
@@ -200,4 +200,11 @@ ul {
 
 li {
   list-style-type: none;
+  text-align: justify;
+  text-justify: inter-word; 
+}
+
+p {
+  text-align: justify;
+  text-justify: inter-word; 
 }
