--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -87,9 +87,7 @@
 .home-intro p {
   font-size: 1rem;
   line-height: 1.8;
-  color: #dcdcdc; /* you could make this a variable too if needed */
-  text-align: justify;
-  text-justify: inter-word; 
+  color: var(--text-color);
 }
 
 .home-intro h3,
