--- a/src/Elements/SocialIcons/SocialIcons.css
+++ b/src/Elements/SocialIcons/SocialIcons.css
@@ -14,7 +14,7 @@
   align-items: center;
   width: 45px;
   height: 45px;
-  background: rgba(255, 255, 255, 0.1); /* glass effect */
+  background: var(--card-border); /* glass effect */
   backdrop-filter: blur(10px);
   border-radius: 12px;
   color: var(--link-color); /* primary color */
